@@ -6,6 +6,7 @@ webmaster_email: webmaster@change-me.org
 webmaster_name: Webmaster
 notifiction_email: noreply@change-me.org
 auto_add_categories: false
+enable_rss: false
 num_items_per_page: 10
 num_max_peers: 10
 num_announce_interval_minutes: 30
